Improvements for Sonar